--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@tailwindcss/typography": "^0.5.12",
+    "@tanstack/react-query": "^5.28.9",
+    "@types/date-fns": "^2.6.0",
+    "@types/react-datepicker": "^6.2.0",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-detect-click-outside": "^1.1.7",
@@ -19,6 +23,7 @@
     "react-router-dom": "^6.22.3",
     "ts-node": "^10.9.2",
     "yup": "^1.4.0",
+    "yup-password": "^0.3.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
