--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "@tanstack/react-query": "^5.28.9",
     "@types/date-fns": "^2.6.0",
     "@types/react-datepicker": "^6.2.0",
+    "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-datepicker": "^6.6.0",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
