--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name ... ...;
+    server_name dubna24.ru 185.211.170.80;
     server_tokens off;
     client_max_body_size 20M;
 
