--- a/infra-local/docker-compose.yml
+++ b/infra-local/docker-compose.yml
@@ -1,20 +1,20 @@
 version: "3.3"
 
 volumes:
-  # pg_data:
+  pg_data:
   static_value:
   media_value:
 
 
 services:
-  # db:
-  #   image: postgres:13.3-alpine
-  #   restart: always
-  #   env_file: ../backend/.env
-  #   volumes:
-  #     - pg_data:/var/lib/postgresql/data
-  #   ports:
-  #     - "5432:5432"
+  db:
+    image: postgres:13.3-alpine
+    restart: always
+    env_file: ../backend/.env
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
   backend:
     build:
       context: ../backend/
@@ -26,16 +26,16 @@ services:
     env_file: ../backend/.env
     networks:
       - test
-    # depends_on:
-    #   - db
+    depends_on:
+      - db
   
 
-  # frontend:
-  #   build:
-  #     context: ../frontend/
-  #     dockerfile: Dockerfile
-  #   volumes:
-  #     - ../frontend/:/app/result_build/
+  frontend:
+    build:
+      context: ../frontend/
+      dockerfile: Dockerfile
+    volumes:
+      - ../frontend/:/app/result_build/
   nginx:
     image: nginx:1.19.3
     restart: always
@@ -45,9 +45,9 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - static_value:/var/www/backend/static/
       - media_value:/var/www/backend/media/
-      # - ../frontend/dist:/usr/share/nginx/html/
-    # depends_on:
-    #   - frontend
+      - ../frontend/dist:/usr/share/nginx/html/
+    depends_on:
+      - frontend
     networks:
       - test
 
